--- a/index.html
+++ b/index.html
@@ -8,3 +8,11 @@
 <h2>
     Author: Daniela Caraeni
 </h2>
+
+<div>
+    <p> Taking a look at commit shas! <p>
+</div>
+
+<div>
+    <p> Added from GitHub <p>
+</div>
