New Changes made to add Body and HTML designation

--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+
+<html>
+<body>
 <h1> Hello Git World! </h1>
 
 <div>
@@ -17,3 +21,5 @@
     <p> Added from GitHub <p>
 </div>
 <!---Some Comments --->
+</body>
+</html>
