--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 
 <html>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 <body>
+<div class = "container"> 
+
 <h1> Hello Git World! </h1>
 
 <div>
@@ -20,6 +23,8 @@
 <div>
     <p> Added from GitHub <p>
 </div>
+</div> 
+
 <!---Some Comments --->
 </body>
 </html>
